# opencv_tracker_demo

./: CMakeLists.txt
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
